<resources>
    <string name="app_name">Cypher Connect</string>
    <string name="about">About</string>
    <string name="not_connected">Not Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="stopping">Stopping...</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="current_ip">Current IP %s</string>
    <string name="select_location">Select location</string>
    <string name="best_location">Best Location</string>
    
    <!-- Get country codes and flags from https://flagpedia.net -->
    <string name="flag_url">https://flagcdn.com/w40/%s.png</string>
    <string name="country_codes_url">https://flagcdn.com/en/codes.json</string>

    <!-- Add Units-->
    <string name="admob_app_id">ca-app-pub-6093428284595418~6135747752</string>
    <string name="admob_banner_id">ca-app-pub-6093428284595418/7486140832</string>
    <string name="admob_interstitial_id">ca-app-pub-6093428284595418/1580547739</string>
</resources>