<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical"
    tools:context=".MainDesign">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
            <include
                layout="@layout/action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/state_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/not_connected"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAlignment="center"
                    android:textColor="#ff1d5bfa"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/connect_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <ImageButton
                    android:id="@+id/connect_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/state_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:text="@string/connected"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/state_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/tap_to_connect"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/current_ip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/current_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#ff1d5bfa"
                    android:fontFamily="@font/poppins_semibold"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/connect_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/traffic_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins"
                    android:drawableStart="@drawable/baseline_upload_24"
                    android:drawablePadding="10dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/current_location"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/traffic_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/baseline_download_24"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/current_location"
                    app:layout_constraintEnd_toEndOf="parent" />
                <TextView
                    android:id="@+id/select_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/select_location"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/current_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <include
                    android:id="@+id/current_location"
                    layout="@layout/location_list_item"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:onClick="onClickLoading"
            android:background="#77000000">
            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:indeterminateTint="#1d5bfa" />
        </FrameLayout>
    </FrameLayout>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bannerAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/admob_banner_id" />
</LinearLayout>